@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-11T16:10:17Z",
-  "count_outdated" : 673,
-  "uniques_outdated" : 41,
-  "count" : 947,
+  "timestamp" : "2022-04-12T00:32:21Z",
+  "count_outdated" : 727,
+  "uniques_outdated" : 42,
+  "count" : 967,
   "uniques" : 56,
   "views" : [
-    {
-      "timestamp": "2022-03-28T00:00:00Z",
-      "count": 34,
-      "count_minmax": [ 0, 54 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
-    },
     {
       "timestamp": "2022-03-29T00:00:00Z",
       "count": 60,
