@@ -1,12 +1,7 @@
 {
-  "count": 274,
+  "count": 240,
   "uniques": 2,
   "views": [
-    {
-      "timestamp": "2022-03-28T00:00:00Z",
-      "count": 34,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-03-29T00:00:00Z",
       "count": 60,
