@@ -1,3 +1,9 @@
+2022-04-12T00:32:21Z:
+* notice: last 14d: all unq: 240 2
+* notice: prev accum: outdated-all outdated-unq / all unq: 673 41 / 947 56
+* notice: next accum: outdated-all outdated-unq / all unq: 727 42 / 967 56
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -0 // +0 +0 / -0 -0
+
 2022-04-11T16:10:17Z:
 * notice: last 14d: all unq: 274 2
 * notice: prev accum: outdated-all outdated-unq / all unq: 673 41 / 961 56
